--- a/src/zinny_webui/templates/partials/survey_select.html
+++ b/src/zinny_webui/templates/partials/survey_select.html
@@ -4,7 +4,7 @@
     <!-- Search Bar -->
     <div class="input-group mb-3" id="survey-input-group">
         <span class="input-group-text" id="survey-section"><i class="bi bi-search"></i></span>
-        <input id="survey-search-input" type="text" class="form-control" placeholder="Search surveys" aria-label="Search Surveys" oninput="SurveySelect.surveySearch()">
+        <input id="survey-search-input" type="text" class="form-control" placeholder="Search surveys" aria-label="Search Surveys" oninput="SurveySelect.handleSearchInput()">
         <button id="survey-filter-button" class="btn btn-secondary was-btn-outline bi bi-funnel" type="button" data-bs-toggle="collapse" data-bs-target="#survey-filter-options" aria-expanded="false" aria-controls="survey-filter-options"></button>
     </div>
 
