improves formatting of Acknowledgements

--- a/src/zinny_webui/templates/about.html
+++ b/src/zinny_webui/templates/about.html
@@ -11,6 +11,14 @@
     </p>
 </p>
 <p>
-    Though we have not used IMDb data, IMDb is the gold standard for movie and TV data. Any correct release dates or spellings of titles are purely coincidental.
-    Still, we should thank IMDb: Title information (in the world is probably all) courtesy of <a href="https://www.imdb.com" target="_blank">IMDb</a>. Used with permission.
+    <section>
+        Acknowledgements:
+    <ul>
+        <li><a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> for the API framework.</li>
+        <li><a href="https://getbootstrap.com/">Bootstrap</a> for the front-end styling.</li>
+        <li><a href="https://www.pyinstaller.org/">PyInstaller</a> for building executables.</li>
+        <li><a href="https://github.com/sveinbjornt/Platypus">Platypus</a> for creating macOS app bundles.</li>
+        <li>Special thanks to <a href="https://www.imdb.com">IMDb</a> for being the standard reference for movie and TV data. While no IMDb data is used in our data, title information may coincide with their dataset.</li>
+    </ul>
+    </section>
 </p>
