clears placeholder menu items

--- a/src/zinny_webui/templates/partials/survey_select.html
+++ b/src/zinny_webui/templates/partials/survey_select.html
@@ -13,13 +13,10 @@
         <div class="accordion-item">
             <div id="survey-filter-options" class="accordion-collapse collapse" aria-labelledby="surveyFilterHeading" data-bs-parent="#survey-filters-accordion">
                 <div class="accordion-body">
-                    <label for="preset-filter" class="form-label">Preset</label>
+                    <label for="preset-filter" class="form-label">Collections</label>
                     <select id="preset-filter" class="form-select">
-                        <option value="">All Surveys</option>
+                        <option value="">(coming soon)</option>
                         <!-- Populate options dynamically from API or a predefined list -->
-                        <option value="picture">Picture</option>
-                        <option value="cinematography">Cinematography</option>
-                        <option value="vfx">VFX</option>
                     </select>
                 </div>
             </div>
